Agregadas las keywords

--- a/boilerplate-npm/package.json
+++ b/boilerplate-npm/package.json
@@ -12,5 +12,11 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
-	}
+	},
+	"keywords": [
+		"backend",
+		"api",
+		"node",
+		"express"
+	]
 }
